--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: 반짝반짝 ♦ ♦♦ ♦♦
+title: 반짝반짝 ✨
 email: kimyojeong@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  C#, Node.js, Ruby, 스노우보드
+  C#, Node.js, Ruby, React, 스노우보드
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kimyojeong.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kimyojeong
@@ -50,9 +50,10 @@ plugins:
 
 # About
 author:
-  name: Kim Minjeong
+  name: Minjeong
   url: https://kimyojeong.github.io
   email: kimyojeong@gmail.com
+  thumbnail: profile.jpg
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
