--- a/package.json
+++ b/package.json
@@ -31,9 +31,21 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "file-loader": "^0.11.2",
+    "laravel-mix": "^1.2.0",
+    "node-sass": "^4.5.3",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^2.0.6",
     "react": "^15.6.2",
     "react-addons-update": "^15.6.2",
     "react-dom": "^15.6.2",
-    "webpack": "^2.1.0-beta.22"
-  }
+    "sass-loader": "^6.0.6",
+    "scss-loader": "0.0.1",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-uglify-js-plugin": "^1.1.9"
+  },
+  "dependencies": {}
 }
