--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "반짝반짝 ♦ ♦♦ ♦♦",
   "main": "bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "develop": "bundle exec jekyll clean && run-p develop:{webpack,jekyll}",
+    "develop:jekyll": "sleep 5 && bundle exec jekyll serve --watch",
+    "develop:webpack": "webpack --mode development --watch",
+    "build": "run-s build:webpack build:jekyll purgecss",
+    "build:jekyll": "JEKYLL_ENV=production bundle exec jekyll build",
+    "build:webpack": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -27,25 +33,26 @@
   },
   "homepage": "https://github.com/kimyojeong/kimyojeong.github.io#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.1",
-    "file-loader": "^0.11.2",
-    "laravel-mix": "^1.2.0",
-    "node-sass": "^4.5.3",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "postcss-loader": "^2.0.6",
-    "react": "^15.6.2",
-    "react-addons-update": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "sass-loader": "^6.0.6",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "css-loader": "^6.7.1",
+    "cssnano": "^5.1.7",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^6.2.0",
+    "laravel-mix": "^6.0.43",
+    "node-sass": "^7.0.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "postcss-loader": "^6.2.1",
+    "react": "^18.0.0",
+    "react-addons-update": "^15.6.3",
+    "react-dom": "^18.0.0",
+    "sass-loader": "^12.6.0",
     "scss-loader": "0.0.1",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
+    "style-loader": "^3.3.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
     "webpack-uglify-js-plugin": "^1.1.9"
-  },
-  "dependencies": {}
+  }
 }
