빌드 오류 수정(jekyll-theme-clean-blog)

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ sass:
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-clean-blog
+theme: minima
 plugins:
   - jekyll-assets
   - jekyll-feed
